# PublicNode

./: .gitignore  Makefile  README.md  pyproject.toml  vps-cli.sh  vps-config.yaml
publicnode-vps-engine/: kernel-metadata.json  vps_setup.ipynb
scripts/: __init__.py  dist.py  embed_notebook.py  lint.py  master_build_vps.py  release.py  update_and_embed.py
tests/: sanity_test.dart  sanity_test.py
vps-app/: .metadata  distributor.yaml  pubspec.yaml
vps-app/android/app/: build.gradle.kts  proguard-rules.pro
vps-app/android/app/src/main/: AndroidManifest.xml
vps-app/android/app/src/main/kotlin/com/myth/publicnode/: MainActivity.kt
vps-app/lib/: main.dart
vps-app/lib/app/: constants.dart  notebook_template.dart  theme.dart
vps-app/lib/models/: connection.dart
vps-app/lib/screens/: command_center_screen.dart  connect_screen.dart  settings_screen.dart  terminal_screen.dart
vps-app/lib/services/: cloud_service.dart  engine_service.dart  navigation_service.dart  ssh_service.dart  storage_service.dart  ws_transport.dart
vps-app/lib/utils/: vps_api_utils.dart
vps-app/lib/widgets/: file_explorer_tab.dart  glass_card.dart  gui_desktop_tab.dart  mobile_toolbar.dart  monitor_tab.dart  process_tab.dart  publicnode_settings_tab.dart  status_indicator.dart  system_vault_tab.dart  vps_bounce.dart  vps_notification.dart  vps_progress_overlay.dart  vps_text_field.dart
vps-app/lib/widgets/file_explorer/: file_explorer_sidebar.dart
vps-app/linux/: CMakeLists.txt
vps-app/linux/packaging/deb/: make_config.yaml
vps-app/linux/packaging/rpm/: Dockerfile.rpm
vps-app/linux/runner/: main.cc  my_application.cc  my_application.h
vps-app/snap/: snapcraft.yaml
vps-app/snap/gui/: publicnode.desktop
vps-os/: vps_os_engine.py
